src/test/ui/closures/closure-reform-bad.stderr
error[E0308]: mismatched types
  --> $DIR/closure-reform-bad.rs:8:15
   |
LL |     call_bare(f) //~ ERROR mismatched types
   |               ^ expected fn pointer, found closure
   |
   = note: expected type `for<'r> fn(&'r str)`
              found type `[closure@$DIR/closure-reform-bad.rs:7:13: 7:50 string:_]`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
